design/css/login.css
/* OK =============================================================================================================== */
body.blitz_body-auth {
  background-image: none;
  background-color: black;
  background-repeat: no-repeat;
  /*background-size: auto 100%;*/
  background-size: cover;
  background-position: bottom 0 right 0;
}

body.body-auth {
  background-image: none;
  background-color: black;
}

@media only screen and (max-width: 479px) {
}

@media only screen and (min-width: 480px) {
  body.body-auth {
    background-image: url(../images/background_0500_login.jpg);
  }

  body.blitz_body-auth {
    background-image: url(../images/background_blitz_login_0500.jpg);
  }
}

@media only screen and (min-width: 580px) {
  body.body-auth {
    background-image: url(../images/background_0600_login.jpg);
  }

  body.blitz_body-auth {
    background-image: url(../images/background_blitz_login_0600.jpg);
  }
}

/* Desktops and laptops medium-res */
@media only screen and (min-width: 760px) {
  body {
    background-image: url(../images/background_0800_login.jpg);
  }

  body.blitz_body-auth {
    background-image: url(../images/background_blitz_login_0800.jpg);
  }
}

/* Desktops and laptops ----------- */
@media only screen and (min-width: 950px) {
  body.body-auth {
    background-image: url(../images/background_1024_login.jpg);
  }

  body.blitz_body-auth {
    background-image: url(../images/background_blitz_login_1024.jpg);
  }
}

@media only screen and (min-width: 1224px) {
  body.body-auth {
    background-image: url(../images/background_1280_login.jpg);
  }

  body.blitz_body-auth {
    background-image: url(../images/background_blitz_login_1280.jpg);
  }
}

/* Large screens ----------- */
@media only screen and (min-width: 1550px) {
  body.body-auth {
    background-image: url(../images/background_1600_login.jpg);
  }

  body.blitz_body-auth {
    background-image: url(../images/background_blitz_login_1600.jpg);
  }
}

@media only screen and (min-width: 1824px) {
  body.body-auth {
    background-image: url(../images/background_1920_login.jpg);
  }

  body.blitz_body-auth {
    background-image: url(../images/background_blitz_login_1920.jpg);
  }
}


@media screen
{
  body, form, table, input, select
  {
    font-size: 1.2em;
  }

  #log_skipper
  {
    height: 16em;
  }

  #log_title
  {
    font-size: 200%;
  }

  #log_description
  {
    margin: 1.5em;
  }

  #log_register {
    margin: 1.5em;
  }

  #log_menu {
    padding: 1em 0;
  }
}

body {
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
}

#login_menu .menu_line a {
  color: #e6ebfb;
}


#log_main, #copyright
{
  background-repeat: no-repeat;

  position: relative;
  border: 0.1em solid #FFFFFF;

  width: 450px;
  margin: auto;

  filter               : alpha(opacity=90);
  -moz-opacity         : 0.9;
  -khtml-opacity       : 0.9;
  opacity              : 0.9;
}

#log_main {
  color: #e6ebfb;
  background-color : #000000;
}

#copyright, #copyright #supernova_ws
{
  padding: 0;

  color: #0a1c25;
  background-color     : #FFFFFF;

  font-size: 0.75em;
  font-weight: bold;

}


#log_error {
  font-size: 160%;
  color: red;
}

#login_container {
  width: 33em;
  font-size: 1em;
  display: none;
  margin-top: 1em;
}

#player_register {
  width: 33em;
  font-size: 1em;
/*  display: none;*/
  margin: 1em 0;
}

#player_register_logout {
  margin: 1em 0;
}

#login_container .ui-tabs-nav {
/*  height: 2.35em;*/
  text-align: center;
}

#login_container .ui-tabs-nav li {
/*  width:32%;*/
}

#login_container .ui-tabs-nav li a {
/*
 display: inline-block;
 float: none;
 width: 100%;
 padding: 5px 0;
 top: 0px;
 margin: 0em;
*/
}


#login_container ol li.ui-tabs-selected a {
/*  background: #344566 url("../../skins/EpicBlue/images/ui-bg_highlight-hard_75_344566_1x100.png") repeat-x 50% 50%;*/
/*  background: #344566 url("../../skins/EpicBlue/images/ui-bg_inset-soft_95_13233e_1x100.png") repeat-x 50% 50%;*/
  /*background: #344566 url("images/ui-bg_inset-soft_95_13233e_1x100.png") repeat-x 50% 50%;*/
  background: #344566;
}

#login_menu {
  padding: 1em 0;
  border-top: 0.1em solid white;
}

.menu_line :not(:last-child):after
{
  content: ' :: ';
}

.password_show {
  /*width: 12em;*/
}

